# anima-agent

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  gh_upload.py  install.ps1  install.sh  pyproject.toml  start_public.ps1
.pytest_cache/v/cache/: nodeids
config/: models-batch.json  models.yaml
docs/: ANIMA_AGENT_gap_assessment.md  ANIMA_Identity_gateway_spec.md  FAQ.md  INTEGRATION_SPEC.md  MODEL_ROUTER.md  QUICKSTART.md  STELLAR_MASTER_ROADMAP.md  STELLAR_NYX_1.0_distill_spec.md  STELLAR_strategy.md  STRATEGY.md  STRATEGY_V2.md  anima_link_architecture.md  anima_link_iris_guide.md  anima_token_protocol_v0.3.md  anima_token_protocol_v1.0.md  zhihu_stellar_agent_era.md
lingos/nyx-v1/: zhihu_article_draft.md
scripts/: gh_deprecate_lingyuan.py  gh_push_all.py  gh_push_clean.py  gh_push_final.py  gh_push_v1.1.0.py  install.ps1
src/anima_agent/: __init__.py
src/anima_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/anima_agent/cli/: __init__.py  main.py
src/anima_agent/dashboard/: __init__.py  server.py
src/anima_agent/dashboard/templates/: index.html
src/anima_agent/export/: __init__.py  packager.py
src/anima_agent/gateway/: __init__.py  client.py
src/anima_agent/governance/: __init__.py  engine.py
src/anima_agent/identity/: __init__.py  anima_link.py  did.py  stellar_did.py
src/anima_agent/models/: __init__.py  router.py
tests/: test_core.py
