[project]
name = "anima-agent"
version = "1.0.0"
description = "ANIMA AGENT - AI Identity Sovereign Runtime"
authors = [
    {name = "ANIMASTELLAR TECHNOLOGY"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pynacl>=1.5",
    "cryptography>=41.0",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "aiofiles>=23.0",
    "httpx>=0.24",
]

[project.scripts]
anima = "anima_agent.cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
